# zechub

./: .gitmodules  Add Zucchini Wallet  Atri Installation guide.md  CNAME  CONTRIBUTING.md  Create Wiki Page - Creators & Tipping .md  Create wiki page - Zcash Organisations: ZODL .md  Digest 02-11-2025.md  Digest 08-10-2025.md  Digest 09-08-2025.md  Digest 10-01-2025.md  Digest 22-11-2025.md  Digest 29-06-2025  Digest-05-22-2026.md  Digest-05-30-2026.md  How to Send and Receive Shielded Zcash (ZEC) with Brave Wallet: A Step-by-Step Privacy Guide  How to Send and Receive Shielded Zcash (ZEC) with Brave Wallet: A Step-by-Step Privacy Guide.md  Ledger.md  Markdown...MD.docx  Newsletter contribution guide .md  Penumbra.md  PenumbraWiki.md  Penumbradoc.md  Post-quantum security in Zcash.md  README.md  Traducción - Zcash Shielded News | Volumen 11  Update Zcash Brand Page - Zodl Wallet  WebBrowser.md  Wiki Page-Arti Tor.md  ZKShieldedAssetPlatforms.md  Zcash Ecosystem Digest - March 29th.md  Zcash Ecosystem Digest June 29th.md  Zcash Ecosystem Digest | Nov 3rd - Nov 8th || SosaTm  Zcash Ecosystem Digest | October 19th  Zcash Ecosystem Digests | by SosaTm  Zcash Ecosysytem Digest June 28th  Zcash Ecosytem Digest | November 30th  Zcash Payment Request URIs.md  Zcash RedBridge Wiki Update.md  ZcashEcosystemDigest.md  (+20 more)
Hackathon/2025/Anino/native/zcash-params/: Cargo.toml
Hackathon/2025/Anino/native/zcash-params/src/: coin.rs  tx.rs
Hackathon/2025/Anino/native/zcash-sync/: .gitignore  Cargo.toml  README.md  warp.js
Hackathon/2025/Anino/native/zcash-sync/docs/: Gemfile  regtest.md
Hackathon/2025/Anino/native/zcash-sync/proto/: service.proto
Hackathon/2025/Anino/native/zcash-sync/src/: api.rs  chain.rs  coinconfig.rs  commitment.rs  fountain.rs  gpu.rs  hash.rs  key2.rs  lib.rs  mempool.rs  nodejs.rs  pay.rs  prices.rs  sapling.rs  scan.rs  zip32.rs
Hackathon/2025/Anino/native/zcash-sync/test-scripts/: package.json
Hackathon/2025/Anino/native/zcash-vote/: Cargo.toml  build.rs
Hackathon/2025/Anino/native/zcash-vote/src/: cash.z.wallet.sdk.rpc.rs  download.rs  election.rs  pb.rs
Hackathon/2025/Zechostream/gtn/: Cargo.toml
Hackathon/2025/Zechostream/gtn/gtn-common/: Cargo.toml
Hackathon/2025/Zechostream/gtn/gtn-common/src/: lib.rs  (+1 more)
Hackathon/2025/Zechostream/gtn/gtn-relay/: Cargo.toml
Hackathon/2025/zatboard/: Cargo.toml  coordinator.toml.example
Hackathon/2025/zatboard/src/: filesystem.rs  memo_decoder.rs  message.rs  zingo_wrapper.rs
Hackathon/2025/zatboard/tests/: integration_tests.rs
Hackathon/2025/zecdonations/zingolib/zingo-api/: Cargo.toml
Hackathon/Zechostream/gtn/gtn-dht/: Cargo.toml
Hackathon/Zechostream/gtn/gtn-dht/src/: lib.rs
Hackathon/Zechostream/gtn/gtn-payment/: Cargo.toml  build.rs
zecpass-hack26/zingolib-service/zingolib/: .env.testing-artifacts  .gitignore  AI_POLICY.md  Cargo.toml  README.md  app_description.txt  mkrelease.sh
zecpass-hack26/zingolib-service/zingolib/.devcontainer/: devcontainer.json
zecpass-hack26/zingolib-service/zingolib/.github/workflows/: cargo-checkmate.yaml  ci-nightly.yaml  ci-pr.yaml  coverage.yaml  test.yaml
zecpass-hack26/zingolib-service/zingolib/darkside-tests/: build.rs
zecpass-hack26/zingolib-service/zingolib/darkside-tests/proptest-regressions/: chain_generic_tests.txt  chain_generics.txt
zecpass-hack26/zingolib-service/zingolib/darkside-tests/proto/: darkside.proto
zecpass-hack26/zingolib-service/zingolib/darkside-tests/src/: constants.rs  darkside_connector.rs  utils.rs
zecpass-hack26/zingolib-service/zingolib/darkside-tests/tests/: tests.rs
zecpass-hack26/zingolib-service/zingolib/docker-ci/: Dockerfile
zecpass-hack26/zingolib-service/zingolib/docs/testing/: testnet.md
zecpass-hack26/zingolib-service/zingolib/githooks/: pre-commit
zecpass-hack26/zingolib-service/zingolib/libtonode-tests/src/: lib.rs
zecpass-hack26/zingolib-service/zingolib/libtonode-tests/tests/: chain_generics.rs  shield_transparent.rs  wallet.rs
zecpass-hack26/zingolib-service/zingolib/pepper-sync/: README.md
zecpass-hack26/zingolib-service/zingolib/pepper-sync/diagrams/: sync.mmd  verification.mmd
zecpass-hack26/zingolib-service/zingolib/pepper-sync/src/: client.rs  config.rs  keys.rs  lib.rs  mocks.rs
zecpass-hack26/zingolib-service/zingolib/utils/: git-require-clean-worktree.sh  trailing-whitespace.sh
zecpass-hack26/zingolib-service/zingolib/zingo-cli/: CHANGELOG.md  Cargo.toml
zecpass-hack26/zingolib-service/zingolib/zingo-cli/src/: commands.rs  main.rs  server_select.rs  version.rs
zecpass-hack26/zingolib-service/zingolib/zingo-memo/: CHANGELOG.md  Cargo.toml
zecpass-hack26/zingolib-service/zingolib/zingo-price/: CHANGELOG.md  Cargo.toml
zecpass-hack26/zingolib-service/zingolib/zingo-price/src/: lib.rs
zecpass-hack26/zingolib-service/zingolib/zingo-status/: Cargo.toml
zecpass-hack26/zingolib-service/zingolib/zingo-testutils/: Cargo.toml
zecpass-hack26/zingolib-service/zingolib/zingolib/: Cargo.toml
zecpass-hack26/zingolib-service/zingolib/zingolib/src/: config.rs  mocks.rs  testutils.rs  wallet.rs
zecpass-hack26/zingolib/darkside-tests/: Cargo.toml
zecpass-hack26/zingolib/darkside-tests/src/: chain_generics.rs  lib.rs
zecpass-hack26/zingolib/darkside-tests/tests/: advanced_reorg_tests.rs
zecpass-hack26/zingolib/libtonode-tests/: Cargo.toml
zecpass-hack26/zingolib/libtonode-tests/src/: chain_generics.rs
zecpass-hack26/zingolib/libtonode-tests/tests/: concrete.rs  sync.rs
zecpass-hack26/zingolib/pepper-sync/: CHANGELOG.md  Cargo.toml  LICENSE-MIT
zecpass-hack26/zingolib/pepper-sync/diagrams/: initialization.mmd  process_scan_results.mmd  scan_worker.mmd
zecpass-hack26/zingolib/pepper-sync/src/: error.rs  scan.rs  sync.rs  utils.rs  wallet.rs  witness.rs
zecpass-hack26/zingolib/pepper-sync/src/client/: fetch.rs
zecpass-hack26/zingolib/pepper-sync/src/scan/: transactions.rs
zecpass-hack26/zingolib/pepper-sync/src/sync/: spend.rs  state.rs
zecpass-hack26/zingolib/zingolib_testutils/: Cargo.toml
zecpass-hack26/zingolib/zingolib_testutils/src/: scenarios.rs
(+3326 files in other folders)
