[package]
name = "zatboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zatboard"
path = "bin/zatboard.rs"

[[bin]]
name = "zatboard-coordinator" 
path = "bin/coordinator.rs"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
tempfile = "3.8"
serde_json = "1.0"
toml = "0.8"
warp = "0.3"


[lib]
name = "zatboard"
path = "src/lib.rs"
