[workspace]
members = [
    "darkside-tests",
    "libtonode-tests",
    "pepper-sync",
    "zingo-cli",
    "zingo-memo",
    "zingo-price",
    "zingo-status",
    "zingolib",
    "zingolib_testutils",
]
resolver = "2"

[workspace.dependencies]
# groups ordered from most specific to least specific

### Workspace
# pepper-sync = "0.2.0"
pepper-sync = { path = "pepper-sync" } # NOTE: for development between releases
zingo-memo = { path = "zingo-memo" } # NOTE: for development between releases
zingo-price = { path = "zingo-price" }
zingo-status = { path = "zingo-status" } # NOTE: for development between releases
zingolib = { path = "zingolib" }

### Tests and Integration Tests
portpicker = "0.1"
proptest = "1.6.0"
tempfile = "3"
test-log = "0.2"
zcash_local_net = { git = "https://github.com/zingolabs/infrastructure.git", rev = "434653b2e807062d22be11692d16d5abf4957b48" }
zingo_test_vectors = { git = "https://github.com/zingolabs/infrastructure.git", rev = "434653b2e807062d22be11692d16d5abf4957b48" }

### Documentation
indoc = "2"
simple-mermaid = "0.2.0"

### Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

### Zingo-common
zingo-netutils = { version = "5.0.0", features = ["globally-public-transparent"] }
zingo_common_components = "0.3.0"

### Zcash
incrementalmerkletree = "0.8.2"
orchard = "0.13.1"
sapling-crypto = "0.7.0"
shardtree = "0.6.1"
zcash_address = "0.11"
zcash_client_backend = { version = "0.22", features = [
    "lightwalletd-tonic",
    "orchard",
    "transparent-inputs",
    "tor",
] }
zcash_encoding = "0.4"
zcash_keys = { version = "0.13", features = [
    "transparent-inputs",
    "sapling",
    "orchard",
] }
zcash_note_encryption = "0.4"
zcash_primitives = "0.27"
zcash_proofs = "0.27"
zcash_protocol = "0.8" # public API (TODO: remove from public API)
zcash_transparent = "0.7"

### Blockchain Protocol
bip0039 = { version = "0.14", features = ["rand"] }
bip32 = { version = "0.6.0-pre.1", default-features = false }
zip32 = "0.2.0"

### Cryptographic
jubjub = "0.10"
ring = "0.17.14"
secp256k1 = "0.31.1"
secrecy = "0.8"
subtle = "2"

### Encoding
bech32 = "0.11.0"
bs58 = "0.5"
byteorder = "1"
hex = "0.4"
json = "0.12"
prost = "0.14"
serde = "1"
serde_json = "1"

### Network
http = "1"
reqwest = { version = "0.12.15", default-features = false }
rustls = { version = "0.23.37", features = ["ring"] }
tonic = { version = "0.14", features = ["tls-webpki-roots"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"

### Parallel processing
crossbeam-channel = "0.5"
rayon = "1"

### Async
futures = "0.3"
futures-util = "0.3"
tokio = "1"

### Error interface
thiserror = "2"

### Internal data
append-only-vec = "0.1.7"
bytes = "1"
itertools = "0.14"
nonempty = "0.11.0"
rust_decimal = "1.37.2"
rustyline = "17.0.2"
shellwords = "1"

### OS hooks
chrono = "0.4"
clap = "4"
dirs = "6"
memuse = "0.2"
rand = "0.8"

### Misc / not-yet-grouped
rust-embed = "8"

[profile.test]
opt-level = 3

[patch.crates-io]
time = { git = "https://github.com/time-rs/time", tag = "v0.3.47" }
