[workspace]
resolver = "2"
members = [ "gtn-common", "gtn-dht","gtn-payment", "gtn-relay"]


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Elijah Hampton"]
license = "MIT"
repository = "https://github.com/elijahhampton/gtn"
description = "Censorship Resistant Broadcasting"

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"

# Web framework and HTTP
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography and encoding
hex = "0.4"
base64 = "0.22"
ring = "0.17"

# P2P networking
libp2p = { version = "0.53", features = ["tls", "noise", "tokio", "tcp", "noise", "yamux", "kad", "identify", "ping", "serde"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging and configuration
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
config = "0.14"

# Audio processing
opus = "0.3"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
strip = true
