[package]
name = "gtn-payment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
gtn-common = { path = "../gtn-common" }
anyhow.workspace = true
base64.workspace = true
futures.workspace = true
hex.workspace = true
orchard = "0.11.0"
prost = "0.14.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
zcash_primitives = "0.24.0"
zcash_proofs = "0.24.0"
zcash_keys = { version = "0.10.1", features = ["sapling", "orchard"] }
zcash_note_encryption = "0.4.1"
reqwest.workspace = true
bincode = "2.0.1"
uuid = { workspace = true, features = ["v4"] }
tracing = "0.1.41"
rand_core = "0.9.3"
bip39 = { version = "2.2.0", features = ["rand"] }
zcash_client_backend = "0.19.1"
zcash_address = { version = "0.9.0" }
he = "0.0.0"


[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
