[package]
name = "zingo-price"
description = "Crate for fetching ZEC prices."
authors = ["<zingo@zingolabs.org>"]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/zingolabs/zingolib"
homepage = "https://github.com/zingolabs/zingolib"
license = "MIT"

[dependencies]
zcash_client_backend = { workspace = true }
zcash_encoding = { workspace = true }

byteorder = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "cookies",
    "rustls-tls",
    "json",
] }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
