[package]
name = "zingo-status"
description = "A Rust library for representing and working with transaction confirmation status in ZCash."
authors = ["<zingo@zingolabs.org>"]
version = "0.2.0"
edition = "2024"
repository = "https://github.com/zingolabs/zingolib"
homepage = "https://github.com/zingolabs/zingolib"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
zcash_protocol = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
zcash_primitives = { workspace = true }
