[package]
name = "zcash-vote"
version = "0.1.1"
edition = "2021"

[dependencies]
thiserror = "1.0.62"
anyhow = "1.0.40"
log = "0.4.14"
futures = "0.3.30"
futures-core = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
orchard = { version = "0.3.0", features = ["vote"] }
prost = "0.10.3"
tokio = { version = "1.6", features = ["rt-multi-thread", "tokio-macros"] }
tonic = { version = "0.7.2", features = ["tls", "tls-roots"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2_sqlite = "0.22"
r2d2 = "0.8"
pasta_curves = "0.5"
blake2b_simd = "1.0.0"
ff = "0.13"
rand = "0.8.4"
serde = {version = "1.0.126", features = ["derive"]}
http = "0.2.12"
halo2_proofs = "0.2.0"
dotenv = "0.15.0"
serde_json = "1.0"
lazy_static = "1.5.0"

bip0039 = "0.9.0"
bech32 = "0.9.1"
zcash_address = "0.2.0"
zcash_note_encryption = "0.2.0"
incrementalmerkletree = "0.3.1"
subtle = "2.4.1"
rand_core = "0.6.4"

[dependencies.zcash_primitives]
version = "0.10.2"
#git = "https://github.com/hhanh00/librustzcash.git"
#rev = "e2fe0b8d386fad99e00d6135c5caf3cc04045646"
features = [ "transparent-inputs" ]

[patch.crates-io]
#orchard = { path = "../../../ywallet/orchard" }
orchard = {git = "https://github.com/hhanh00/orchard.git", rev="768c365"}
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }

#[build-dependencies]
#prost-build = "0.10.3"
